Внесенные корректировки после теста

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h2 class="card-title">
         Фритрек и нулевой спринт: Подготовка к работе
       </h2>
-      <figure class="block-img card-joy">
+      <figure class="block-img card-01">
         <img class="card-img" src="./images/jei-lee-YTV-GHH9VpQ-unsplash.jpg" loading="lazy"
           alt="Текстура в персиковых тонах" />
         <figcaption class="label-img">&lt;/HTML&gt;</figcaption>
@@ -73,9 +73,8 @@
 
     <article class="card">
       <h2 class="card-title">1 спринт: Я — чистый лист</h2>
-      <figure class="block-img card-mystery">
-        <img class="card-img" src="./images/europeana-Xdpjwz2aO2w-unsplash (1).jpg" loading="lazy"
-          alt="Текстура в светлых тонах"/>
+      <figure class="block-img card-02">
+        <img class="card-img" src="./images/europeana-Xdpjwz2aO2w-unsplash.jpg" loading="lazy" alt="Текстура в светлых тонах"/>
         <figcaption class="label-img">&lt;/HTML&gt;</figcaption>
       </figure>
       <div class="content">
@@ -121,8 +120,8 @@
 
     <article class="card">
       <h2 class="card-title">1 спринт: А если не получится?</h2>
-      <figure class="block-img card-romance">
-        <img class="card-img" src="./images/dima-solomin-uJ_x_xh1RLY-unsplash (1).jpg" loading="lazy"
+      <figure class="block-img card-03">
+        <img class="card-img" src="./images/dima-solomin-uJ_x_xh1RLY-unsplash.jpg" loading="lazy"
           alt="Нежненькая текстура"/>
         <figcaption class="label-img">&lt;CSS&gt;</figcaption>
       </figure>
@@ -168,7 +167,7 @@
     <article class="card">
       <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
       <figure class="block-img">
-        <img class="card-img card-passion" src="./images/eugene-golovesov-mHZzSNHucjc-unsplash (1).jpg" loading="lazy"
+        <img class="card-img card-04" src="./images/eugene-golovesov-mHZzSNHucjc-unsplash.jpg" loading="lazy"
           alt="Метель закружила дерево "/>
         <figcaption class="label-img">&lt;desigions&gt;</figcaption>
       </figure>
@@ -215,8 +214,8 @@
 
     <article class="card">
       <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
-      <figure class="block-img card-vintage">
-        <img class="card-img" src="./images//carlos-torres-RsBdUP2y_Z0-unsplash (1).jpg" loading="lazy"
+      <figure class="block-img card-05">
+        <img class="card-img" src="./images/carlos-torres-RsBdUP2y_Z0-unsplash.jpg" loading="lazy"
           alt="Иллюстрация барышни с мороженным"/>
         <figcaption class="label-img">care</figcaption>
       </figure>
@@ -264,7 +263,7 @@
 
     <article class="card">
       <h2 class="card-title">3 спринт: Обходные стратегии</h2>
-      <figure class="block-img card-futurism">
+      <figure class="block-img card-06">
         <img class="card-img" src="./images/solen-feyissa-u8K7iXpgY9I-unsplash.jpg" loading="lazy"
           alt="Текестура красной энергии"/>
         <figcaption class="label-img">&lt;support&gt;</figcaption>
@@ -310,8 +309,8 @@
 
     <article class="card">
       <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
-      <figure class="block-img card-dream">
-        <img class="card-img" src="./images/pawel-czerwinski-SOHqP5gmvFU-unsplash (1).jpg" loading="lazy"
+      <figure class="block-img card-07">
+        <img class="card-img" src="./images/pawel-czerwinski-SOHqP5gmvFU-unsplash.jpg" loading="lazy"
           alt="Текстура - космос"/>
         <figcaption class="label-img">&lt;lifes-style: none;&gt;</figcaption>
       </figure>
@@ -358,8 +357,8 @@
 
     <article class="card">
       <h2 class="card-title">«Сейчас я здесь»</h2>
-      <figure class="block-img card-apocalypse">
-        <img class="card-img" src="./images/helen-ngoc-n-YUl--06ItZc-unsplash (1).jpg" loading="lazy"
+      <figure class="block-img card-08">
+        <img class="card-img" src="./images/helen-ngoc-n-YUl--06ItZc-unsplash.jpg" loading="lazy"
           alt="Синяя дымка"/>
         <figcaption class="label-img">&lt;experience&gt;</figcaption>
       </figure>
