--- a/index.html
+++ b/index.html
@@ -19,25 +19,24 @@
 
 <body class="page">
   <header class="header">
-    <div class="header__container">
-      <h1 class="header__logo">&lt;/HTML&gt;</h1>
-      <span class="header__text">закрывающий тег</span>
-    </div>
+      <a href="/" class="header__logo">&lt;/HTML&gt;</a>
+      <h1 class="header__text">закрывающий тег</h1>
   </header>
 
   <main class="main">
+
     <article class="card">
       <h2 class="card-title">
         Фритрек и нулевой спринт: Подготовка к работе
       </h2>
-      <figure class="block-img card-01">
+      <figure class="block-img card-bright">
         <img class="card-img" src="./images/jei-lee-YTV-GHH9VpQ-unsplash.jpg" loading="lazy"
           alt="Текстура в персиковых тонах" />
         <figcaption class="label-img">&lt;/HTML&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             Это было самое начало пути. На этом этапе важно было проникнуться
             основами и настроиться на учёбу. И, &shy; возможно, подумать, как
             новые знания могут повлиять на ваше будущее.
@@ -73,15 +72,15 @@
 
     <article class="card">
       <h2 class="card-title">1 спринт: Я — чистый лист</h2>
-      <figure class="block-img card-02">
+      <figure class="block-img card-contrast">
         <img class="card-img" src="./images/europeana-Xdpjwz2aO2w-unsplash.jpg" loading="lazy" alt="Текстура в светлых тонах"/>
         <figcaption class="label-img">&lt;/HTML&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             На первых этапах мы работали со страхами и сомнениями, которые
-            часто испытывают новички. Один из них — страх перед чистым листом.
+            часто испытывают новички. Один &shy; из них — страх перед чистым листом.
             Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто
             за этим ощущением скрываются более глубокие вопросы: с чего
             начать? а вдруг будет слишком сложно? что, если я не справлюсь?
@@ -90,7 +89,6 @@
             Не сомневалась, что со всем справлюсь.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-02">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -120,14 +118,14 @@
 
     <article class="card">
       <h2 class="card-title">1 спринт: А если не получится?</h2>
-      <figure class="block-img card-03">
+      <figure class="block-img card-opaque">
         <img class="card-img" src="./images/dima-solomin-uJ_x_xh1RLY-unsplash.jpg" loading="lazy"
           alt="Нежненькая текстура"/>
         <figcaption class="label-img">&lt;CSS&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             Первый проект — позади! Но это всё ещё самое начало пути. Радость
             могла быстро померкнуть и смениться ожиданием провала. Или вы,
             наоборот, могли вдохновиться успехами и поверить в себя.
@@ -136,7 +134,6 @@
             Вдохновилась успехами и продолжала поверить в себя.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-03">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -167,13 +164,13 @@
     <article class="card">
       <h2 class="card-title">2 спринт: Погоня за идеалом</h2>
       <figure class="block-img">
-        <img class="card-img card-04" src="./images/eugene-golovesov-mHZzSNHucjc-unsplash.jpg" loading="lazy"
+        <img class="card-img card-grayscale" src="./images/eugene-golovesov-mHZzSNHucjc-unsplash.jpg" loading="lazy"
           alt="Метель закружила дерево "/>
         <figcaption class="label-img">&lt;desigions&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             На этом этапе вы уже достаточно разбирались в основах вёрстки,
             чтобы понять, как много ещё впереди. Вы могли попытаться погнаться
             за идеалом и понять, что он недостижим. А, может, вы вовсе и не
@@ -184,7 +181,6 @@
             Все еще не так сложно, как думалось.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-04">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -214,14 +210,14 @@
 
     <article class="card">
       <h2 class="card-title">2 спринт: О тех, кто рядом</h2>
-      <figure class="block-img card-05">
+      <figure class="block-img card-sepia">
         <img class="card-img" src="./images/carlos-torres-RsBdUP2y_Z0-unsplash.jpg" loading="lazy"
           alt="Иллюстрация барышни с мороженным"/>
         <figcaption class="label-img">care</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             Всё это время вы были не одиноки (хотя, возможно, иногда и
             чувствовали, что одни против целого мира). Вас окружали
             одногруппники, команда сопровождения и просто близкие люди,
@@ -233,7 +229,6 @@
             Согласна, с единомышленники - намного легче.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-05">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -263,14 +258,14 @@
 
     <article class="card">
       <h2 class="card-title">3 спринт: Обходные стратегии</h2>
-      <figure class="block-img card-06">
+      <figure class="block-img card-vibrant">
         <img class="card-img" src="./images/solen-feyissa-u8K7iXpgY9I-unsplash.jpg" loading="lazy"
           alt="Текестура красной энергии"/>
         <figcaption class="label-img">&lt;support&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             На этом курсе вы постоянно решали разные задачи. В какой-то момент
             вам могло показаться, что решения просто иссякли. Значит, пришло
             время посмотреть на задачу под другим углом.
@@ -279,7 +274,6 @@
             Третий спринт оказался не таким простым как думалось.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-06">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -309,14 +303,14 @@
 
     <article class="card">
       <h2 class="card-title">3 спринт: Когда опускаются руки</h2>
-      <figure class="block-img card-07">
+      <figure class="block-img card-saturated">
         <img class="card-img" src="./images/pawel-czerwinski-SOHqP5gmvFU-unsplash.jpg" loading="lazy"
           alt="Текстура - космос"/>
         <figcaption class="label-img">&lt;lifes-style: none;&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             Во время учёбы часто возникает чувство, когда не знаешь, за что
             хвататься. Вроде и проектную пора сдавать, и задачи хочется
             порешать, и в теории получше разобраться, и жизнь не забыть
@@ -327,7 +321,6 @@
             Проект делаю по ночам, чтобы никто не отвлекал.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-07">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -357,26 +350,25 @@
 
     <article class="card">
       <h2 class="card-title">«Сейчас я здесь»</h2>
-      <figure class="block-img card-08">
+      <figure class="block-img card-cool-tone">
         <img class="card-img" src="./images/helen-ngoc-n-YUl--06ItZc-unsplash.jpg" loading="lazy"
           alt="Синяя дымка"/>
         <figcaption class="label-img">&lt;experience&gt;</figcaption>
       </figure>
       <div class="content">
         <div class="card-text">
-          <p class="text text-main">
+          <p class="text">
             Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
             Во-первых, впереди ещё много материала про «красотищу». Во-вторых,
             с окончанием курса учёба не заканчивается. Вёрстка — это целый
             мир. И этот мир постоянно меняется. Познать его полностью не
             получится, но это тот случай, когда важен сам процесс познания.
-            Ведь часто путь — и есть результат.
+            Ведь часто путь — и есть &shy; результат.
           </p>
           <p class="text">
             Надо идти вперед, в следующем спринте - JavaScript, а это уже сложнее.
           </p>
         </div>
-
         <div class="card__actions">
           <button type="button" class="card__icon-button" aria-labelledby="like-button-08">
             <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -407,7 +399,7 @@
     <button type="button" class="button button-save" onclick="window['floppy-dialog'].showModal()"
       aria-controls="floppy-dialog">
       <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
-        <use href=".//svg/floppy.svg#save-icon"></use>
+        <use href="./svg/floppy.svg#save-icon"></use>
       </svg>
 
       <span class="button__text">Сохранить на&nbsp;память</span>
@@ -415,12 +407,12 @@
 
     <dialog class="popup" id="floppy-dialog">
       <div class="popup-content">
-        <svg class="icon-big" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
-          <use href=".//svg/floppy.svg#save-icon"></use>
+        <svg class="popup__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+          <use href="./svg/floppy.svg#save-icon"></use>
         </svg>
-        <span class="button__text button-dialog">Вставьте дискету, чтобы продолжить</span>
+        <p class="popup-text">Вставьте дискету, чтобы продолжить</p>
       </div>
-      <button type="button" class="button-dialog dialog-ok " onclick="window['floppy-dialog'].close()">
+      <button type="button" class="button popup__button--close " onclick="window['floppy-dialog'].close()">
         <span class="button__text">ок</span>
       </button>
     </dialog>
